# template-fastapi

./: .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  pyproject.toml  pytest.ini  ruff.toml
src/: main.py
src/modules/: router.py
tests/end_to_end/: conftest.py
